[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab3"
version = "0.1.0"
description = "Лабораторная работа №3"
readme = "README.md"
authors = [
    {name = "ilya", email = "example@mail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = []

[tool.black]
line-length = 79
target-version = ["py39"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
exclude = [".venv", "build", "dist"]